--- a/City_Happiness_Analysis_Complete.ipynb
+++ b/City_Happiness_Analysis_Complete.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "434e3d47",
    "metadata": {},
    "outputs": [
@@ -173,9 +173,8 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "# Corrected file path with raw string\n",
     "df = pd.read_csv(r\"Expanded_Happiness_Index_Data.csv\")\n",
-    "df.head()\n"
+    "df.head()"
    ]
   },
   {
@@ -188,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "bc9f5efb",
    "metadata": {},
    "outputs": [
@@ -217,9 +216,8 @@
     }
    ],
    "source": [
-    "\n",
     "# Check for missing values\n",
-    "df.isnull().sum()\n"
+    "df.isnull().sum()"
    ]
   },
   {
@@ -232,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "f5ee094b",
    "metadata": {},
    "outputs": [
@@ -248,7 +246,6 @@
     }
    ],
    "source": [
-    "\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
@@ -256,7 +253,7 @@
     "plt.figure(figsize=(10, 6))\n",
     "sns.heatmap(df.corr(numeric_only=True), annot=True, cmap='coolwarm')\n",
     "plt.title(\"Correlation Matrix of Numeric Features\")\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
@@ -269,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "ef032106",
    "metadata": {},
    "outputs": [
@@ -467,13 +464,12 @@
     }
    ],
    "source": [
-    "\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
     "\n",
     "scaler = MinMaxScaler()\n",
     "normalized_cols = ['Air_Quality_Index', 'Decibel_Level', 'Green_Space_Area', 'Cost_of_Living_Index', 'Healthcare_Index']\n",
     "df[[col + '_Norm' for col in normalized_cols]] = scaler.fit_transform(df[normalized_cols])\n",
-    "df.head()\n"
+    "df.head()"
    ]
   },
   {
@@ -486,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "9505387e",
    "metadata": {},
    "outputs": [
@@ -590,14 +586,13 @@
     }
    ],
    "source": [
-    "\n",
-    "# Use provided sub-indices and create final composite index\n",
+    "# Used provided sub-indices and create final composite index\n",
     "df['Composite_Happiness_Index'] = (\n",
     "    0.4 * df['Environmental_Quality_Index'] +\n",
     "    0.35 * df['Health_Wellness_Index'] +\n",
     "    0.25 * df['Mobility_Comfort_Index']\n",
     ")\n",
-    "df[['City', 'Composite_Happiness_Index']].sort_values(by='Composite_Happiness_Index', ascending=False).head(10)\n"
+    "df[['City', 'Composite_Happiness_Index']].sort_values(by='Composite_Happiness_Index', ascending=False).head(10)"
    ]
   },
   {
@@ -610,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "465db873",
    "metadata": {},
    "outputs": [
@@ -626,7 +621,6 @@
     }
    ],
    "source": [
-    "\n",
     "from sklearn.cluster import KMeans\n",
     "\n",
     "features = ['Environmental_Quality_Index', 'Health_Wellness_Index', 'Mobility_Comfort_Index']\n",
@@ -636,7 +630,7 @@
     "# Visualize clusters\n",
     "sns.scatterplot(data=df, x='Environmental_Quality_Index', y='Health_Wellness_Index', hue='Cluster', palette='Set2')\n",
     "plt.title(\"City Clusters Based on Sub-Indices\")\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
@@ -649,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "13d30720",
    "metadata": {},
    "outputs": [
@@ -676,14 +670,13 @@
     }
    ],
    "source": [
-    "\n",
     "# Bar plot of top 10 happiest cities\n",
     "top_cities = df.sort_values(by='Composite_Happiness_Index', ascending=False).head(10)\n",
     "plt.figure(figsize=(12, 6))\n",
     "sns.barplot(data=top_cities, x='City', y='Composite_Happiness_Index', palette='viridis')\n",
     "plt.title(\"Top 10 Happiest Cities (Composite Index)\")\n",
     "plt.xticks(rotation=45)\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
@@ -696,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "6d7cf2aa",
    "metadata": {},
    "outputs": [
@@ -732,7 +725,6 @@
     }
    ],
    "source": [
-    "\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "\n",
@@ -744,7 +736,7 @@
     "    plt.title(f'Distribution of {col}')\n",
     "    plt.xlabel(col)\n",
     "    plt.ylabel('Frequency')\n",
-    "    plt.show()\n"
+    "    plt.show()"
    ]
   },
   {
@@ -757,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "9dc9e1c8",
    "metadata": {},
    "outputs": [
@@ -770,14 +762,13 @@
     }
    ],
    "source": [
-    "\n",
     "if 'Region' in df.columns:\n",
     "    region_avg = df.groupby('Region')['Composite_Happiness_Index'].mean().sort_values(ascending=False)\n",
     "    region_avg.plot(kind='bar', figsize=(10, 6), title='Average Composite Index by Region')\n",
     "    plt.ylabel('Composite Happiness Index')\n",
     "    plt.show()\n",
     "else:\n",
-    "    print(\"Region column not available in dataset.\")\n"
+    "    print(\"Region column not available in dataset.\")"
    ]
   },
   {
@@ -790,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "d3c216b8",
    "metadata": {},
    "outputs": [
@@ -806,7 +797,6 @@
     }
    ],
    "source": [
-    "\n",
     "# Pairplot for visual relationship\n",
     "sns.pairplot(df[['Environmental_Quality_Index', 'Health_Wellness_Index', 'Mobility_Comfort_Index', 'Composite_Happiness_Index']], diag_kind='kde')\n",
     "plt.suptitle('Pairplot of Sub-Indices and Composite Index', y=1.02)\n",
@@ -853,7 +843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "c7b8ae39",
    "metadata": {},
    "outputs": [
@@ -877,7 +867,6 @@
     }
    ],
    "source": [
-    "\n",
     "# Line plot of Composite Index over time for a few cities\n",
     "selected_cities = ['Berlin', 'Tokyo', 'New York', 'Paris']\n",
     "df['Date'] = pd.to_datetime(df['Month'] + ' ' + df['Year'].astype(str))\n",
@@ -892,7 +881,7 @@
     "plt.legend()\n",
     "plt.grid(True)\n",
     "plt.tight_layout()\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
@@ -905,7 +894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "dae307c4",
    "metadata": {},
    "outputs": [
@@ -921,7 +910,6 @@
     }
    ],
    "source": [
-    "\n",
     "# Pivot table and heatmap\n",
     "pivot = df.pivot_table(index='City', columns='Month', values='Composite_Happiness_Index')\n",
     "plt.figure(figsize=(14, 18))\n",
@@ -929,7 +917,7 @@
     "plt.title(\"Heatmap of Composite Index by City and Month\")\n",
     "plt.xlabel(\"Month\")\n",
     "plt.ylabel(\"City\")\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
@@ -942,7 +930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "961a7b54",
    "metadata": {},
    "outputs": [
@@ -958,13 +946,12 @@
     }
    ],
    "source": [
-    "\n",
     "plt.figure(figsize=(12, 6))\n",
     "sns.boxplot(data=df[['Environmental_Quality_Index', 'Health_Wellness_Index', 'Mobility_Comfort_Index']])\n",
     "plt.title(\"Boxplot Comparison of Sub-Indices\")\n",
     "plt.ylabel(\"Index Value\")\n",
     "plt.grid(True)\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
@@ -977,7 +964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "989ea4ff",
    "metadata": {},
    "outputs": [
@@ -993,14 +980,13 @@
     }
    ],
    "source": [
-    "\n",
     "plt.figure(figsize=(8, 6))\n",
     "sns.scatterplot(data=df, x='Air_Quality_Index', y='Composite_Happiness_Index', hue='City', legend=False)\n",
     "plt.title(\"Composite Happiness Index vs Air Quality Index\")\n",
     "plt.xlabel(\"Air Quality Index (Lower is Better)\")\n",
     "plt.ylabel(\"Composite Happiness Index\")\n",
     "plt.grid(True)\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
@@ -1013,7 +999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "48339e26",
    "metadata": {},
    "outputs": [
@@ -1045,7 +1031,6 @@
     }
    ],
    "source": [
-    "\n",
     "# Top 10 cities\n",
     "top_10 = df.groupby('City')['Composite_Happiness_Index'].mean().sort_values(ascending=False).head(10)\n",
     "\n",
@@ -1064,7 +1049,7 @@
     "axes[1].set_xlabel(\"Composite Happiness Index\")\n",
     "\n",
     "plt.tight_layout()\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
@@ -1077,7 +1062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "2acbab68",
    "metadata": {},
    "outputs": [
@@ -1093,7 +1078,6 @@
     }
    ],
    "source": [
-    "\n",
     "correlation = df[[\n",
     "    'Environmental_Quality_Index', \n",
     "    'Health_Wellness_Index', \n",
@@ -1104,7 +1088,7 @@
     "plt.figure(figsize=(8, 6))\n",
     "sns.heatmap(correlation, annot=True, cmap='coolwarm')\n",
     "plt.title(\"Correlation of Sub-Indices with Composite Index\")\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
@@ -1117,7 +1101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "a0cab970",
    "metadata": {},
    "outputs": [
@@ -1133,22 +1117,21 @@
     }
    ],
    "source": [
-    "\n",
     "# Select top and bottom cities\n",
     "top_cities = top_10.index.tolist()\n",
     "bottom_cities = bottom_10.index.tolist()\n",
     "\n",
-    "# Compute average sub-indices\n",
+    "# Computed average sub-indices\n",
     "avg_top = df[df['City'].isin(top_cities)][['Environmental_Quality_Index', 'Health_Wellness_Index', 'Mobility_Comfort_Index']].mean()\n",
     "avg_bottom = df[df['City'].isin(bottom_cities)][['Environmental_Quality_Index', 'Health_Wellness_Index', 'Mobility_Comfort_Index']].mean()\n",
     "\n",
-    "# Combine into one DataFrame\n",
+    "# Combined into one DataFrame\n",
     "comparison_df = pd.DataFrame({'Top Cities': avg_top, 'Bottom Cities': avg_bottom})\n",
     "comparison_df.plot(kind='bar', figsize=(10, 6), title='Average Sub-Indices: Top vs Bottom Cities')\n",
     "plt.ylabel(\"Average Index Value\")\n",
     "plt.grid(True)\n",
     "plt.tight_layout()\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   }
  ],
